--- a/src/components/Verse/VerseLink/VerseLink.module.scss
+++ b/src/components/Verse/VerseLink/VerseLink.module.scss
@@ -2,6 +2,9 @@
 
 .verseLink {
   opacity: var(--opacity-50);
-  letter-spacing: -1px;
   text-align: center;
+}
+
+.en {
+  letter-spacing: -1px;
 }
